--- a/Recipes/Recipes/Views/RecipeDetailPage.xaml
+++ b/Recipes/Recipes/Views/RecipeDetailPage.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:converter="clr-namespace:Recipes.Converter"
+    xmlns:iOS="clr-namespace.Xamarin.Forms.PlatformConfiguration.iOSSpecific; assembly= Xamarin.Forms.Core"
     Title="Details"
     BindingContext="{x:Static local:RecipeData.SingleRecipe}">
     <ContentPage.Resources>
